open sidebar button fades in an out depending on sidebar status. cropping 'first-point' bug fixed

--- a/image_editor/static/styles/style.css
+++ b/image_editor/static/styles/style.css
@@ -226,6 +226,12 @@ input[type="file"] {
 .sidebar-icon {
     font-size: 24px;
     vertical-align: middle;
+    transition: 0.5;
+}
+
+#open-sidebar {
+    opacity: 0%;
+    cursor: default;
 }
 
 .sidebar-close-icon {
